src/ui/snapshots/lazydatabricks__ui__tests__profile_tab_status_focused_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Profile───────────────────────────────────────┐"
"│dev → adb-1.azuredatabric││Profile        dev                                 │"
"└─────────────────────────┘│Host           https://adb-1.azuredatabricks.net   │"
"┌─[2]─Jobs────────────────┐│Jobs           3                                   │"
"│[someone] okonomi_gold   ││                                                   │"
"│nightly_bronze_ingest    ││                                                   │"
"│weekly_report            ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────1 of 3┘│                                                   │"
"┌─[3]─Pipelines───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"│                         ││GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Focus: 0-3/Tab │ Screen: + │ Log: @ │ Quit: q                            v0.1.0"
