src/ui/snapshots/lazydatabricks__ui__tests__run_detail_scrolled_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail - JSON - Output › run 5085189276┐"
"│◐ dev → adb-1.azuredatabr││endring_sluttdato_fakta  Workload failed, see run o│"
"│3 of 3 jobs · 0s ago     ││utput for details                                  │"
"│◐ 1 · ✗ 1 · ● 0          ││AnalysisException: [TABLE_OR_VIEW_NOT_FOUND] The ta│"
"└─────────────────────────┘│ble or view `silver`.`sluttdato` cannot be found.  │"
"┌─[2]─Jobs by activity────┐│Traceback (most recent call last):                 │"
"│ 2h ◐ [someone] okonomi_…││  File "src/endring.py", line 42, in <module>      │"
"│ 1d ✗ nightly_bronze_ing…││    df = spark.table("silver.sluttdato")           │"
"│    · weekly_report      ││  File "/databricks/spark/python/pyspark/sql/sessio│"
"│                         ││n.py", line 1690, in table                         │"
"│                         ││    return DataFrame(self._jsparkSession.table(tabl│"
"│                         ││eName), self)                                      │"
"│                         ││pyspark.errors.exceptions.captured.AnalysisExceptio│"
"└───────────────────1 of 3┘│n: [TABLE_OR_VIEW_NOT_FOUND] The table or view `sil│"
"┌─[3]─Pipelines ⠋ by activ┐│ver`.`sluttdato` cannot be found.                  │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"└───────────────────0 of 0┘│GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"┌─[4]─Compute ⠋───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Scroll: j/k │ Back: Esc │ Browser: o │ Actions: x │ Quit: q │ Keys: ?    v0.0.0"
