src/ui/snapshots/lazydatabricks__ui__tests__run_started_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail ⠋───────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││Run ID           Started      Duration  Result     │"
"│3 of 3 · 0s ago          ││50851892761076   -            -         ◐ PENDING  │"
"└─────────────────────────┘│50851892761075   09/01 10:08  -         ◐ RUNNING  │"
"┌─[2]─Jobs────────────────┐│50851892761073   08/31 10:08  1m12s     ✓ SUCCESS  │"
"│[someone] okonomi_gold   ││50851892761074   08/30 10:08  57s       ✗ FAILED   │"
"│nightly_bronze_ingest    ││                                                   │"
"│weekly_report            ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────1 of 3┘│                                                   │"
"┌─[3]─Pipelines───────────┐│                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"│                         ││GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Started run 50851892761076                                                     "
